[Qt] HTML5 Drag and Drop demos not working https://bugs.webkit.org/show_bug.cgi?id=56486

Reviewed by Andreas Kling.

Handling the drop with JavaScript was not working with Qt because if the action is ignored
in response to DragEnter, no further events are sent to the view.

Drag and drop is defined and used differently by webpages. The drag move events are determining
what action should take place. To adopt this behavior for Qt, we always accept drag enter events
on the widget.

* Api/qwebpage.cpp:
(QWebPagePrivate::dragEnterEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@83442 bbb929c8-8fbe-4397-9dbb-9b2b20218538